<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/postsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_posts"
        android:iconTint="@color/text_01"
        android:title="@string/posts"/>

    <item
        android:id="@+id/albumFragment"
        android:enabled="true"
        android:icon="@drawable/ic_album"
        android:iconTint="@color/text_01"
        android:title="@string/album"/>

    <item
        android:id="@+id/usersFragment"
        android:enabled="true"
        android:icon="@drawable/ic_users"
        android:iconTint="@color/text_01"
        android:title="@string/users"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/text_01"
        android:title="@string/profile"/>
</menu>