<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/postsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_posts"
        android:title="@string/posts"
        tools:targetApi="o" />

    <item
        android:id="@+id/albumFragment"
        android:enabled="true"
        android:icon="@drawable/ic_album"
        android:title="@string/album"
        tools:targetApi="o" />

    <item
        android:id="@+id/usersFragment"
        android:enabled="true"
        android:icon="@drawable/ic_users"
        android:iconTint="@color/text_01"
        android:title="@string/users"
        tools:targetApi="o" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/text_01"
        android:title="@string/profile"
        tools:targetApi="o" />

</menu>