<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.curr_profile.CurrProfileFragment"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Header1"
            android:textColor="@color/text_01"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            tools:text="Username here" />

        <kz.tutorial.jsonplaceholdertypicode.presentation.utils.UserInfoItem
            android:id="@+id/item_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/ui_01"
            app:cardCornerRadius="8dp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_mytodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/ui_01">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_todos"
                style="@style/Header1"
                android:textColor="@color/main_01"
                android:gravity="center"
                android:padding="16dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Header2"
            android:textColor="@color/text_01"
            android:text="@string/company"
            android:layout_gravity="start"
            android:layout_marginVertical="16dp"/>

        <kz.tutorial.jsonplaceholdertypicode.presentation.utils.UserCompanyItem
            android:id="@+id/item_user_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/ui_01"
            app:cardCornerRadius="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="16dp"
            style="@style/Header2"
            android:textColor="@color/text_01"
            android:text="@string/address"/>

        <kz.tutorial.jsonplaceholdertypicode.presentation.utils.UserAddressItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_user_address"
            app:cardBackgroundColor="@color/ui_01"
            app:cardCornerRadius="8dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
