<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_email_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_w_colon"
            android:textAppearance="@style/Body1"
            android:textColor="@color/text_02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Body1"
            android:textColor="@color/links"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_email_hint" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/b_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_email, tv_email_hint" />

        <TextView
            android:id="@+id/tv_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fullname_w_colon"
            android:textAppearance="@style/Body1"
            android:textColor="@color/text_02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_hint"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Body1"
            android:textColor="@color/text_01"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_name_hint" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/b_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_name, tv_name_hint" />

        <TextView
            android:id="@+id/tv_phone_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_w_colon"
            android:textAppearance="@style/Body1"
            android:textColor="@color/text_02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_hint"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Body1"
            android:textColor="@color/main_01"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_phone_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_phone_hint" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/b_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_phone, tv_phone_hint" />

        <TextView
            android:id="@+id/tv_website_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/website_w_colon"
            android:textAppearance="@style/Body1"
            android:textColor="@color/text_02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_hint"/>

        <TextView
            android:id="@+id/tv_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Body1"
            android:textColor="@color/links"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_website_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_website_hint" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/b_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_phone, tv_phone_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>