<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_details_tv_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Header1"
        android:textColor="@color/text_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:text="@string/posts" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_details_tv_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/by"
        android:textAppearance="@style/Body1"
        android:textColor="@color/text_01"
        app:layout_constraintBottom_toTopOf="@id/post_details_tv_post_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_details_tv_post_title"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_details_tv_post_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/Body1"
        android:textColor="@color/main_01"
        app:layout_constraintBottom_toBottomOf="@id/post_details_tv_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/post_details_tv_by"
        app:layout_constraintTop_toTopOf="@id/post_details_tv_by"
        tools:text="@string/posts" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_details_tv_post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Body1"
        android:textColor="@color/text_01"
        app:layout_constraintBottom_toTopOf="@id/post_details_tv_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_details_tv_by"
        tools:text="@string/posts" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_details_tv_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/comments"
        android:textAppearance="@style/Header2"
        android:textColor="@color/text_01"
        app:layout_constraintBottom_toTopOf="@id/post_details_rv_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_details_tv_post_body" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_details_tv_show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all"
        android:textAppearance="@style/Body1"
        android:textColor="@color/links"
        app:layout_constraintBottom_toBottomOf="@id/post_details_tv_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/post_details_tv_comments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_details_rv_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_details_tv_comments"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>